src/styles/components/Banner.css
@media (max-width: 1155px) {
    .banner-container{
        height: 700px !important;
    }
}


@media (max-width: 900px) {
    .banner-container{
        height: 600px !important;
    }
    .banner-content{
        justify-self: center !important;
        margin: auto !important;
        width: 95% !important;
    }
}
@media (max-width: 470px) {
    .banner-content{
        margin-top: 110px !important;
        word-break: break-all;
    }
    .banner-container{
        min-height: 750px !important;
    }
}

.banner-container{
    /* background-image: url('https://i.ibb.co/XCb0B5G/main-banner.png'); */
    background-position: center bottom;
    background-repeat: no-repeat; 
    background-size: cover; 
    height: 800px;
    width: 100%;
    border-radius: 0px;
    display: flex;
    box-shadow: rgba(33, 35, 38, 0.6) 0px 10px 10px -10px;
}
.banner-content{
    display: flex;
    align-self: center;
    flex-direction: column;
    width: 550px;
    background: rgba(0, 0, 0, 0.15);
    border: 1px solid rgba(132, 132, 132, 0.5);
    backdrop-filter: blur(1.5px);
    /* Note: backdrop-filter has minimal browser support */

    padding: 30px 20px 30px 20px;
    margin-left: 14%;
}

.banner-content h3{
    word-break: break-all;
}

#banner-subtext, #banner-title{
    font-family: 'Ubuntu', sans-serif !important;
    font-weight: 300;
    color: white;
}

#banner-subtext{
    font-size: 23px !important;
}


/* Animations for Banner */

.fade-in-text {
    animation: fadein 1.6s;
    -moz-animation: fadein 1.6s; /* Firefox */
    -webkit-animation: fadein 1.6s; /* Safari and Chrome */
    -o-animation: fadein 1.6s; /* Opera */
}
@keyframes fadein {
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-moz-keyframes fadein { /* Firefox */
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-webkit-keyframes fadein { /* Safari and Chrome */
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-o-keyframes fadein { /* Opera */
    from {
        opacity:0;
    }
    to {
        opacity: 1;
    }
}

